# MixTex-rs-GUI

./: .gitattributes  .gitignore  README.md  daemon.html  editor.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
public/css/: custom.css  latex.css
public/js/common/: common_05.js  common_10.js  common_50.js  config.js  item.js
public/js/latex/: mathjaxCore.js  mathpix.js  output.js
public/js/tauri/: backend.js  editor.js  infer.js
public/publish/: latex.bundle.min.js
src/: App.vue  complete.ts.d.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.config.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  config.rs  error.rs  hotkey.rs  lib.rs  main.rs  mixtex.rs  model.rs  onnx.rs  screenshot.rs  setup.rs  tray.rs  vit_image_processor.rs  window.rs  winml.rs
src-tauri/tests/: tests.rs
src/components/: MixTex.vue  TitleBar.vue
src/router/: index.ts  routes.ts
src/views/: MixTex.vue  NotFound.vue  Screenshot.vue
