[package]
name = "mixtex-rs-gui"
version = "0.1.0"
description = "Mixtex gui app"
authors = ["MosRat"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all", "devtools", "system-tray"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-clipboard = { git = "https://github.com/CrossCopy/tauri-plugin-clipboard", version = "1.1.4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = {version = "0.4.3" }
window-shadows = {version = "0.2.2"}

tokenizers = { version = "0.20.0", features = ["default"] }
image = { version = "0.25.2", features = ["default"] }
ort = { version = "2.0.0-rc.4",default-features = false, features = ["ndarray"] }
ndarray = { version = "0.15.6" }
xcap = {version = "0.0.11"}
mouse_position = {version = "0.1.4"}
once_cell = "1.19.0"


[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = ["Win32_Foundation", "Foundation", "Foundation_Collections", "AI", "AI_MachineLearning", "Graphics", "Graphics_Imaging", "Media", "Win32_System_WinRT", "Storage_Streams"]


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = 'abort'
