[package]
name = "mixtex-rs-gui"
version = "0.2.2"
description = "Mixtex gui app"
authors = ["MosRat"]
license = "GPL-3.0-only"
edition = "2021"
build = "build.rs"
repository = "https://github.com/MosRat/MixTex-rs-GUI.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mixtex_rs_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools", "tray-icon", "unstable"] }
tauri-plugin-log = { version = "2" }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-http = { version =  "2" ,features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokenizers = { version = "0.20.0", features = ["default"] }
image = { version = "0.25.2", features = ["default"] }
ort = { version = "2.0.0-rc.9",default-features = false, features = ["ndarray"] }
ndarray = { version = "0.16.1" }
xcap = {version = "0.0.14" }
log = "0.4.22"
tokio = "1.41.1"
anyhow = "1.0.93"





[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = ["Win32_Foundation", "Foundation", "Foundation_Collections", "AI", "AI_MachineLearning", "Graphics", "Graphics_Imaging", "Media", "Win32_System_WinRT", "Storage_Streams"]

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
#tauri-plugin-clipboard = { git = "https://github.com/CrossCopy/tauri-plugin-clipboard", branch = "v2" }
tauri-plugin-single-instance = { version = "2" }
#None

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]



[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.


